[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/Assets/Puzzle1/ejecmplo.png" type="Texture" id=1]
[ext_resource path="res://Assets/Assets/Puzzle1/1c.png" type="Texture" id=2]
[ext_resource path="res://Assets/Assets/hueco.png" type="Texture" id=3]
[ext_resource path="res://Escenas/Juego/Juego.gd" type="Script" id=4]
[ext_resource path="res://Escenas/Juego/Parte1.gd" type="Script" id=5]
[ext_resource path="res://Escenas/Juego/Parte2.gd" type="Script" id=6]
[ext_resource path="res://Assets/Assets/Puzzle1/1d.png" type="Texture" id=7]
[ext_resource path="res://Assets/Assets/Puzzle1/1i.png" type="Texture" id=8]
[ext_resource path="res://Escenas/Juego/Parte3.gd" type="Script" id=9]
[ext_resource path="res://Assets/Assets/Puzzle1/2c.png" type="Texture" id=10]
[ext_resource path="res://Escenas/Juego/Parte4.gd" type="Script" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 36, 34.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 30, 32 )

[node name="Juego" type="Node2D"]
script = ExtResource( 4 )

[node name="Tabla" type="Sprite" parent="."]
position = Vector2( 735, 358 )
scale = Vector2( 6, 6 )
texture = ExtResource( 3 )

[node name="Referencia" type="Sprite" parent="."]
position = Vector2( 232, 130 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="Parte1" type="Sprite" parent="."]
position = Vector2( 61, 350 )
texture = ExtResource( 2 )
script = ExtResource( 5 )

[node name="Area2D" type="Area2D" parent="Parte1"]
position = Vector2( -40, -34 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Parte1/Area2D"]
position = Vector2( 39, 33.5 )
shape = SubResource( 1 )

[node name="Parte2" type="Sprite" parent="."]
position = Vector2( 403, 541 )
texture = ExtResource( 7 )
script = ExtResource( 6 )

[node name="Area2" type="Area2D" parent="Parte2"]
position = Vector2( -40, -34 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Parte2/Area2"]
position = Vector2( 39, 33.5 )
shape = SubResource( 1 )

[node name="Parte3" type="Sprite" parent="."]
position = Vector2( 386, 344 )
texture = ExtResource( 8 )
script = ExtResource( 9 )

[node name="Area3" type="Area2D" parent="Parte3"]
position = Vector2( -40, -34 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Parte3/Area3"]
position = Vector2( 39, 33.5 )
shape = SubResource( 1 )

[node name="Parte4" type="Sprite" parent="."]
position = Vector2( 100, 503 )
texture = ExtResource( 10 )
script = ExtResource( 11 )

[node name="Area4" type="Area2D" parent="Parte4"]
position = Vector2( -40, -34 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Parte4/Area4"]
position = Vector2( 39, 33.5 )
shape = SubResource( 1 )

[node name="Posicion1" type="Position2D" parent="."]
position = Vector2( 706, 250 )

[node name="AreaPosicion1" type="Area2D" parent="Posicion1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Posicion1/AreaPosicion1"]
position = Vector2( 3, -3 )
shape = SubResource( 2 )

[node name="Posicion2" type="Position2D" parent="."]
position = Vector2( 795, 250 )

[node name="AreaPosicion2" type="Area2D" parent="Posicion2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Posicion2/AreaPosicion2"]
position = Vector2( 3, -3 )
shape = SubResource( 2 )

[node name="Posicion3" type="Position2D" parent="."]
position = Vector2( 611, 250 )

[node name="AreaPosicion3" type="Area2D" parent="Posicion3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Posicion3/AreaPosicion3"]
position = Vector2( 3, -3 )
shape = SubResource( 2 )

[node name="Posicion4" type="Position2D" parent="."]
position = Vector2( 704, 326 )

[node name="AreaPosicion4" type="Area2D" parent="Posicion4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Posicion4/AreaPosicion4"]
position = Vector2( 3, -3 )
shape = SubResource( 2 )

[connection signal="input_event" from="Parte1/Area2D" to="Parte1" method="_on_Area2D_input_event"]
[connection signal="input_event" from="Parte2/Area2" to="Parte2" method="_on_Area2_input_event"]
[connection signal="input_event" from="Parte3/Area3" to="Parte3" method="_on_Area3_input_event"]
[connection signal="input_event" from="Parte4/Area4" to="Parte4" method="_on_Area4_input_event"]
[connection signal="area_entered" from="Posicion1/AreaPosicion1" to="Parte1" method="_on_AreaPosicion1_area_entered"]
[connection signal="area_entered" from="Posicion2/AreaPosicion2" to="Parte2" method="_on_AreaPosicion2_area_entered"]
[connection signal="area_entered" from="Posicion3/AreaPosicion3" to="Parte3" method="_on_AreaPosicion3_area_entered"]
[connection signal="area_entered" from="Posicion4/AreaPosicion4" to="Parte4" method="_on_AreaPosicion4_area_entered"]
